# morse-trainer

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gen_version.cmake
docs/: DESIGN.md
src/: CMakeLists.txt  app.cpp  app.h  button-handler.cpp  button-handler.h  morse_trainer.cpp  screen.h  settings.h  settings_store.cpp  settings_store.h
src/screens/: about_screen.cpp  about_screen.h  help_screen.cpp  help_screen.h  idle_screen.cpp  idle_screen.h  menu_screen.cpp  menu_screen.h  morse_screen.cpp  morse_screen.h  resistor_screen.cpp  resistor_screen.h  settings_screen.cpp  settings_screen.h  stub_screen.cpp  stub_screen.h
